fix(front): Fix ui-fold edge cases and overflow
Change inner workings of ui-fold to be more like state machine. It helps
with edge cases when state of in-transition fold was changed. As a bonus
it makes overflow of expanded fold visible so things like focused input
outline are properly rendered.

--- a/front/styles/_common.scss
+++ b/front/styles/_common.scss
@@ -52,11 +52,21 @@
 }
 
 .fold {
-  overflow-y: hidden;
-  overflow-x: hidden;
-
   transition: height 250ms ease;
   will-change: height;
+  overflow: hidden;
+
+  &--folded {
+    height: 0;
+
+    .fold__inner {
+      overflow: auto;
+    }
+  }
+
+  &--expanded {
+    overflow: visible;
+  }
 }
 
 .flex {
